Завершено тестирование  mReception - Myrent
